Fixed Safari gap issue in navigation

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -121,10 +121,9 @@
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
 }
 
-.main-nav-list {
+.main-nav-list > * {
   margin-left: 3.2rem;
 }
 
